# tricorder

./: .gherkin-lintrc  .gitignore  .ignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README2.md  contest.json  download.ps1  download.sh  git-town.toml  rumdl.toml  run-that-app
.claude/: settings.json
.claude/tricorder-hooks/: post_write.sh  pre_commit.sh
.github/workflows/: ci.yml  release.yml
UI/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
UI/src/: App.jsx  index.css
UI/src/components/: CTASection.jsx  CodeNebula.jsx  Hero.jsx  ImpactSection.jsx  LanguageSection.jsx  Navbar.jsx  PipelineSection.jsx  PlaygroundSection.jsx  ScanSection.jsx  TransformSection.jsx  TricorderSection.jsx
UI/src/utils/: data.js
demo/: data.sql  main.css  main.ts  run-that-app
docs/: RELEASE.md  contributing.md
features/: help.feature  wrong_command.feature
features/apps/biome/: check.feature  install.feature
features/apps/ghokin/: install.feature
features/check/: css.feature  json.feature  markdown.feature  typescript.feature
features/commands/: help.feature  unknown.feature
features/commands/check/: css.feature  empty.feature  gitignore.feature  go.feature  java.feature  json.feature  multiple_stacks.feature  no_code.feature  no_config_file.feature  python.feature  show.feature  sql.feature  typescript.feature  yml.feature
features/commands/fix/: css.feature  empty.feature  json.feature  no_code.feature  python.feature  sql.feature  typescript.feature  yml.feature
features/commands/help/: help.feature
features/commands/precommit/: formats_only_staged.feature  runs_all_stack_fixes.feature
features/config/: custom_fixes.feature  custom_linters.feature
features/fix/: cucumber.feature  markdown.feature
features/gitignore/: check.feature  lint.feature
features/help/: help.feature  unknown.feature  version.feature
features/stacks/_empty/: check.feature  fix.feature  format.feature  pitstop.feature
features/stacks/_gitignore/: check.feature  fix.feature  format.feature
features/stacks/_multiple/: check.feature  format.feature
features/stacks/css/: check.feature  exclude.feature  fix.feature  fix_unsafe.feature  format.feature  install.feature  pitstop.feature  precommit.feature
features/stacks/cucumber/: check.feature  fix.feature  format.feature  install.feature  lint.feature  pitstop.feature  precommit.feature
features/stacks/go/: check.feature  fix.feature  format.feature  install.feature  lint.feature  pitstop.feature  precommit.feature
features/stacks/java/: check.feature  fix.feature  format.feature  install.feature  pitstop.feature  precommit.feature
features/stacks/json/: check.feature  fix.feature  (+5 more)
features/statistics/: check.feature  fix.feature  format.feature  pitstop.feature
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/apps/: biome.rs  checkstyle.rs  delete_empty_folders.rs  gherkin_lint.rs  ghokin.rs  gofumpt.rs  golangci_lint.rs  mod.rs  prettier.rs  pyright.rs  ruff.rs  rumdl.rs  sqlfmt.rs  taplo.rs  text_runner.rs  tikibase.rs
src/checkers/: mod.rs  ruff.rs
src/cli/: input.rs  output.rs
src/commands/: check.rs  ci.rs  fix.rs  fix_unsafe.rs  format.rs  init.rs  lint.rs  mod.rs  pitstop.rs  precommit.rs
src/domain/: checker.rs  detected_stack.rs  error.rs  files.rs  fix.rs  formatter.rs  lint.rs  linter.rs  mod.rs  stack.rs  stack_type.rs  tool.rs
src/filesystem/: all_files.rs  mod.rs
src/git/: mod.rs  status.rs
src/stacks/: css.rs  cucumber.rs  go.rs  java.rs  json.rs  jsonc.rs  markdown.rs  mod.rs  python.rs  sql.rs  toml.rs  typescript.rs  unknown.rs  yml.rs
src/strings/: compare_lines.rs  mod.rs
src/templates/: post_write.sh  pre_commit.sh  settings.json
test/: main.py
test_helpers/: Cargo.toml
test_helpers/src/: compare_lines.rs  lib.rs  snapshots.rs
tests/: cucumber.rs  cuke.rs
tests/cuke/: dot_writer.rs  given_steps.rs  main.rs  then_steps.rs  when_steps.rs  world.rs
(+75 files in other folders)
