#:schema https://www.schemastore.org/cargo.json

[workspace]
members = [".", "test_helpers"]

[package]
name = "tricorder"
version = "0.0.0"
edition = "2024"
description = "The all-in-one DevEx tool."

[dependencies]
big_s = "1.0.2"
clap = { version = "4.6.1", features = ["derive"] }
conc = { package = "concurrent_shell_commands", version = "0.3.1" }
ignore = "0.4.26"
itertools = "0.14.0"
run-that-app = "0.37.2"
which = "5.0.0"

[dev-dependencies]
contains_lines = "0.0.1"
test_helpers = { path = "test_helpers" }
cucumber = "0.23.0"
itertools = "0.14.0"
maplit = "1.0.2"
mio = "1.2.1"
os_pipe = "1.2.3"
pretty = { package = "pretty_assertions", version = "1.4.1" }
regex = "1.12.3"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "time",
] }

[[test]]
name = "cuke"   # the filename of the test
harness = false # allows Cucumber to print output instead of libtest
test = false    # don't run this as part of "cargo test"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "forbid"
