#:schema https://www.schemastore.org/cargo.json

[workspace]
members = [".", "test_helpers"]

[package]
name = "tricorder"
version = "0.0.4"
edition = "2024"
description = "The all-in-one DevEx tool."

[dependencies]
big_s = "1.0.2"
clap = { version = "4.6.1", features = ["derive"] }
conc = { package = "concurrent_shell_commands", version = "0.5.0" }
ignore = "0.4.26"
itertools = "0.14.0"
rta = { package = "run-that-app", version = "0.38.0" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
which = "8.0.3"

[dev-dependencies]
contains_lines = "0.0.1"
test_helpers = { path = "test_helpers" }
cucumber = { version = "0.23", features = ["libtest"] }
itertools = "0.14.0"
maplit = "1.0.2"
mio = "1.2.1"
pretty = { package = "pretty_assertions", version = "1.4.1" }
regex = "1.12.4"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "time",
] }
rand = "0.10.1"

[[test]]
name = "cuke"   # the filename of the test
harness = false # allows Cucumber to print output instead of libtest
test = false    # don't run this as part of "cargo test"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
into_iter_without_iter = "allow"

[lints.rust]
unsafe_code = "forbid"
