#:schema https://www.schemastore.org/cargo.json

[workspace]
members = [".", "test_helpers"]

[package]
name = "tricorder"
version = "0.0.10"
edition = "2024"
description = "The all-in-one DevEx tool."

[dependencies]
ahash = "0.8.12"
big_s = "1.0.2"
clap = { version = "4.6.1", features = ["derive"] }
conc = { package = "concurrent_shell_commands", version = "0.6.1" }
ignore = "0.4.27"
itertools = "0.14.0"
rta = { package = "run-that-app", version = "0.39.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.21.0"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"
which = "8.0.4"

[dev-dependencies]
contains_lines = "0.0.1"
cucumber = "0.23.0"
itertools = "0.14.0"
maplit = "1.0.2"
mio = "1.2.1"
pretty = { package = "pretty_assertions", version = "1.4.1" }
rand = "0.10.2"
regex = "1.12.4"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
test_helpers = { path = "test_helpers" }
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "time",
] }

[[test]]
name = "cuke"   # the filename of the test
harness = false # allows Cucumber to print output instead of libtest
test = false    # don't run this as part of "cargo test"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
into_iter_without_iter = "allow"

[lints.rust]
unsafe_code = "forbid"
